--- a/telas_ofc/menu-2.html
+++ b/telas_ofc/menu-2.html
@@ -27,7 +27,7 @@
         <nav class="navbar navbar-expand-lg fixed">
           <div class="container-fluid">
             <div>
-              <img src="Image/Logo Passatempo.png" class="passatempo_logo ">
+              <img src="img/Logo Passatempo.png" class="passatempo_logo ">
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -85,7 +85,7 @@
                     
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-12 col-xl-3 col_imagem_cabecalho border border-success ">
-                    <img src="Image/Logo Passatempo.png" alt="imagem-logo-passatempo" class=" imagem_cabecalho border border-dark">
+                    <img src="img/Logo Passatempo.png" alt="imagem-logo-passatempo" class=" imagem_cabecalho border border-dark">
                 </div>
             </div>
 
