--- a/testes/area_admin.html
+++ b/testes/area_admin.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
+    <link href="css_testes/areaadm.css" rel="stylesheet">
 
 <!-- <style>
     .botao_adm{
@@ -39,7 +40,7 @@
 
 
 
-            <div class="container-fluid area_admin bg-secondary">
+            <div class="container-fluid area_admin bg-secondary justify-content-center">
                 <div class="row justify-content-evenly  border border-danger">
                     <a href="tutorial.html" class="btn btn-primary btn-lg botao_adm border border-dark col-sm-12 col-md-2" role="button" aria-disabled="true">
                       <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-map" viewBox="0 0 16 16">
