--- a/menu.html
+++ b/menu.html
@@ -26,6 +26,18 @@
 </head>
 
 <body>
+<!--  começo vlibras  -->
+    <div vw class="enabled">
+    <div vw-access-button class="active"></div>
+    <div vw-plugin-wrapper>
+      <div class="vw-plugin-top-wrapper"></div>
+    </div>
+  </div>
+  <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+  <script>
+    new window.VLibras.Widget('https://vlibras.gov.br/app');
+  </script>
+<!--  fim vlibras  -->
     <header>
         <nav class="navbar navbar-expand-md fixed-top ">
             <div class="container-fluid  ">
