--- a/recursos/Pop-up Cookies.html
+++ b/recursos/Pop-up Cookies.html
@@ -11,7 +11,7 @@
             bottom: 0;
             left: 0;
             right: 0;
-            background-color: rgba(0, 0, 0, 0.85);
+            background-color: #3E4096;
             color: #fff;
             padding: 20px;
             display: flex;
@@ -24,7 +24,7 @@
             flex: 1;
         }
         .cookie-popup button {
-            background-color: #007BFF;
+            background-color: #6787E7;
             color: #fff;
             border: none;
             padding: 10px 20px;
@@ -40,7 +40,7 @@
 </head>
 <body>
     <div id="cookiePopup" class="cookie-popup">
-        <p>Usamos cookies para melhorar a experiência do usuário. Para mais informações, veja nossos <a href="#termos" style="color: #FFD700;">Termos de Uso</a>.</p>
+        <p>Usamos cookies para melhorar a experiência do usuário. Para mais informações, veja nossos <a href="Termos de Uso - Passatempo Educativo.pdf" style="color: #FFD700;">Termos de Uso</a>.</p>
         <button onclick="acceptCookies()">Concordo</button>
         <button onclick="declineCookies()">Recusar</button>
     </div>
