--- a/telas_ofc/admin-2.html
+++ b/telas_ofc/admin-2.html
@@ -13,7 +13,13 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     
     
+    <!-- fonte guy -->
     <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
+
+    <!-- fonte ubuntu -->
+    <link
+        href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+        rel="stylesheet">
 
 
 </head>
@@ -23,10 +29,10 @@
     <nav class="navbar navbar-expand-md fixed">
       <div class="container-fluid">
         <div>
-          <img src="Image/Logo Passatempo.png" class="home_logo ">
+          <img src="img/Logo Passatempo.png" class="passatempo_logo" alt="Logo Passatempo">
         </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon "></span>
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div class="offcanvas offcanvas-end justify-content-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
@@ -34,27 +40,27 @@
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>  
           <div class="offcanvas-body">
-            <ul class="navbar-nav justify-content-around flex-grow-1">
-              <li class="nav-item text-top ">
-                <a class="nav-link " aria-current="page" href="menu-2.html">Home</a>
+            <ul class="navbar-nav barra_navegacao justify-content-around flex-grow-1">
+              <li class="nav-item text-top">
+                <a class="nav-link navegacao_link" aria-current="page" href="home-2.html">Home</a>
               </li>
-              <li class="nav-item ">
-                <a class="nav-link" href="oficinas-2.html">Oficinas</a>
+              <li class="nav-item navegacao_item">
+                <a class="nav-link navegacao_link" href="oficinas-2.html">Oficinas</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="eventos.html">Eventos Sociais</a>
+              <li class="nav-item navegacao_item">
+                <a class="nav-link navegacao_link" href="eventos-2.html">Eventos Sociais</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="eventos.html">Eventos Corporativos</a>
+              <li class="nav-item navegacao_item">
+                <a class="nav-link navegacao_link" href="eventos-2.html">Eventos Corporativos</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="saudeBemEstar.html">Saude e Bem-Estar</a>
+              <li class="nav-item navegacao_item">
+                <a class="nav-link navegacao_link " href="saudeBemEstar-2.html">Saúde e Bem-Estar</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contato.html">Contato</a>
+              <li class="nav-item navegacao_item">
+                <a class="nav-link navegacao_link " href="contato-2.html">Contato</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="adm.html">Admin</a>
+              <li class="nav-item navegacao_item">
+                <a class="nav-link navegacao_link active" href="admin-2.html">Admin</a>
               </li>
             </ul>
           </div>
