--- a/telas_ofc/saudeBemEstar-2.html
+++ b/telas_ofc/saudeBemEstar-2.html
@@ -25,10 +25,11 @@
 
 
   <header>
-    <nav class="navbar navbar-expand-lg fixed">
+    <!-- navbar -->
+    <nav class="navbar navbar-expand-md fixed">
       <div class="container-fluid">
         <div>
-          <img src="Image/Logo Passatempo.png" class="passatempo_logo ">
+          <img src="img/Logo Passatempo.png" class="passatempo_logo" alt="Logo Passatempo">
         </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -40,31 +41,30 @@
           </div>  
           <div class="offcanvas-body">
             <ul class="navbar-nav barra_navegacao justify-content-around flex-grow-1">
-              <li class="nav-item text-top ">
-                <a class="nav-link navegacao_link" aria-current="page" href="menu-2.html">Home</a>
+              <li class="nav-item text-top">
+                <a class="nav-link navegacao_link" aria-current="page" href="home-2.html">Home</a>
               </li>
-              <li class="nav-item navegaçao_item">
-                <a class="nav-link  navegacao_link" href="oficinas-2.html">Oficinas</a>
+              <li class="nav-item navegacao_item">
+                <a class="nav-link navegacao_link" href="oficinas-2.html">Oficinas</a>
               </li>
-              <li class="nav-item navegaçao_item">
-                <a class="nav-link  navegacao_link" href="eventos.html">Eventos Sociais</a>
+              <li class="nav-item navegacao_item">
+                <a class="nav-link navegacao_link" href="eventos-2.html">Eventos Sociais</a>
               </li>
-              <li class="nav-item navegaçao_item">
-                <a class="nav-link  navegacao_link" href="eventos.html">Eventos Corporativos</a>
+              <li class="nav-item navegacao_item">
+                <a class="nav-link navegacao_link" href="eventos-2.html">Eventos Corporativos</a>
               </li>
-              <li class="nav-item navegaçao_item">
-                <a class="nav-link  navegacao_link" href="saudeBemEstar.html">Saude e Bem-Estar</a>
+              <li class="nav-item navegacao_item">
+                <a class="nav-link navegacao_link active" href="saudeBemEstar-2.html">Saúde e Bem-Estar</a>
               </li>
-              <li class="nav-item navegaçao_item">
-                <a class="nav-link  navegacao_link" href="contato.html">Contato</a>
+              <li class="nav-item navegacao_item">
+                <a class="nav-link navegacao_link" href="contato-2.html">Contato</a>
               </li>
-              <li class="nav-item navegaçao_item">
-                <a class="nav-link  navegacao_link" href="adm.html">Admin</a>
+              <li class="nav-item navegacao_item">
+                <a class="nav-link navegacao_link" href="admin-2.html">Admin</a>
               </li>
             </ul>
+          </div>
         </div>
-        
-
       </div>
     </nav>
   </header>
