--- a/testes/teste_menu.html
+++ b/testes/teste_menu.html
@@ -1,4 +1,13 @@
-body{
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Área Admin</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
+    <style>
+        body {
     background-color: #8DA5ED !important;
 }
 
@@ -15,8 +24,6 @@ body{
 .col_titulo_cabecalho {
     color: black;
     text-align: center;
-    padding-left: 0 !important;
-    padding-right: 0 !important;
 }
 .imagem_cabecalho{
     max-width: 100%; 
@@ -28,7 +35,7 @@ body{
 .t1_cabecalho {
     width: 100%;
     height: 100%;
-    font-size: 4.0rem;
+    font-size: 3.5rem;
     font-family: "Luckiest Guy", sans-serif;
     word-wrap: break-word;
 }
@@ -36,7 +43,7 @@ body{
 .t2_cabecalho {
     width: 100%;
     height: 100% !important;
-    font-size: 2.3rem;
+    font-size: 2.2rem;
     font-family: "Luckiest Guy", sans-serif;
     word-wrap: break-word;
 }
@@ -55,11 +62,8 @@ body{
 }
 
 .t1_descricao {
-    width: 100%;
-    height: 100% !important;
-    font-size: 2.2rem;
-    margin-top: 1%;
-    padding: 5px;
+    font-size: 40px;
+    margin-top: 3%;
     font-family: "Luckiest Guy", sans-serif;
 }
 
@@ -117,3 +121,32 @@ body{
         margin-right: 140px;
     }
 }
+
+
+    </style>
+</head>
+<body>
+    <div class="container-fluid">
+        <div class="row align-items-center justify-content-center row_cabecalho ">
+            <div class="col-md-1"></div>
+            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-7 col_titulo_cabecalho">
+                <div class="row-12 row_titulo_cabecalho">
+                    <div class="col">
+                        <h1 class="mt-2 t1_cabecalho ">Eventos</h1>
+                    </div>
+                </div>
+                <div class="row-12 row_titulo_cabecalho">
+                    <div class="col">
+                        <h2 class="mt-2 t2_cabecalho">Passatempo Educativo</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-3 col_imagem_cabecalho">
+                <img src="img/Logo Passatempo.png" alt="imagem-logo-passatempo" class="imagem_cabecalho">
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
