--- a/testes/tester-2.html
+++ b/testes/tester-2.html
@@ -14,9 +14,9 @@
             href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
             rel="stylesheet">
     <style>
-        .carousel-inner {
-        /* padding: 1em; */
-        }
+        /* .carousel-inner {
+        padding: 1em;
+        } */
         .card {
         margin: 0 0.5em;
         box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
