--- a/telas_ofc/galeria-teste.html
+++ b/telas_ofc/galeria-teste.html
@@ -3,14 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galeria de Fotos</title>
+    <title>Galeria de Fotos e Área Admin</title>
+    <link rel="stylesheet" href="styles/navbar-2.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+        <!-- fonte guy -->
+        <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
+
+        <!-- fonte ubuntu -->
+        <link
+            href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+            rel="stylesheet">
+
     <style>
         body {
             font-family: Arial, sans-serif;
             background-color: #a3b8ff;
             text-align: center;
             color: #000;
+            margin: 0;
         }
+
         .header {
             margin-top: 20px;
         }
@@ -24,7 +36,7 @@
             margin: 20px 0;
         }
         .tab {
-            background-color: #5a4fcf;
+            /* background-color: #5a4fcf; */
             color: white;
             padding: 10px 20px;
             margin: 0 5px;
@@ -45,13 +57,77 @@
             margin: 10px;
             border-radius: 10px;
         }
+        .titulo_cabecalho{
+            font-family:"Luckiest Guy", sans-serif;
+            font-size: 5.5rem !important;
+            color: black;
+        }
+        div.tabs{
+            background-color: #5a4fcf;
+        }
+
     </style>
 </head>
 <body>
+    <header>
+        <nav class="navbar navbar-expand-md fixed">
+            <div class="container-fluid">
+                <div>
+                    <img src="img/Logo Passatempo.png" class="passatempo_logo" alt="Logo Passatempo">
+                </div>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="offcanvas offcanvas-end justify-content-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                    <div class="offcanvas-header">
+                        <h2 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h2>
+                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>  
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav barra_navegacao justify-content-around flex-grow-1">
+                            <li class="nav-item text-top">
+                                <a class="nav-link active navegacao_link" aria-current="page" href="home-2.html">Home</a>
+                            </li>
+                            <li class="nav-item navegacao_item">
+                                <a class="nav-link navegacao_link" href="oficinas-2.html">Oficinas</a>
+                            </li>
+                            <li class="nav-item navegacao_item">
+                                <a class="nav-link navegacao_link" href="eventos-2.html">Eventos</a>
+                            </li>
+                            <li class="nav-item navegacao_item">
+                                <a class="nav-link navegacao_link" href="saudeBemEstar-2.html">Saúde e Bem-Estar</a>
+                            </li>
+                            <li class="nav-item navegacao_item">
+                                <a class="nav-link navegacao_link" href="galeria.html">Galeria</a>
+                            </li>
+                            <li class="nav-item navegacao_item">
+                                <a class="nav-link navegacao_link" href="contato-2.html">Contato</a>
+                            </li>
+                            <li class="nav-item navegacao_item">
+                                <a class="nav-link navegacao_link" href="admin-2.html">Admin</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <br>
+    <br>
+    <br>
+  
+    
+
     <div class="header">
-        <h1>NOSSA GALERIA DE FOTOS</h1>
+        <div class="m-4">
+            <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" fill="currentColor" class="bi bi-images" viewBox="0 0 16 16">
+                <path d="M4.502 9a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3"/>
+                <path d="M14.002 13a2 2 0 0 1-2 2h-10a2 2 0 0 1-2-2V5A2 2 0 0 1 2 3a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v8a2 2 0 0 1-1.998 2M14 2H4a1 1 0 0 0-1 1h9.002a2 2 0 0 1 2 2v7A1 1 0 0 0 15 11V3a1 1 0 0 0-1-1M2.002 4a1 1 0 0 0-1 1v8l2.646-2.354a.5.5 0 0 1 .63-.062l2.66 1.773 3.71-3.71a.5.5 0 0 1 .577-.094l1.777 1.947V5a1 1 0 0 0-1-1z"/>
+            </svg>
+        </div>
+        <h1 class="titulo_cabecalho m-4">NOSSA GALERIA DE FOTOS</h1>
     </div>
-    <div class="tabs">
+    <div class="tabs justify-content-around">
         <div class="tab active" onclick="showGallery('all')">Todas as Fotos</div>
         <div class="tab" onclick="showGallery('workshops')">Oficinas</div>
         <div class="tab" onclick="showGallery('events')">Eventos</div>
@@ -66,19 +142,15 @@
 
     <script>
         function showGallery(category) {
-            const tabs = document.querySelectorAll('.tab');
-            tabs.forEach(tab => tab.classList.remove('active'));
+            document.querySelectorAll('.tab').forEach(tab => tab.classList.remove('active'));
             document.querySelector(`.tab[onclick="showGallery('${category}')"]`).classList.add('active');
 
-            const images = document.querySelectorAll('.gallery img');
-            images.forEach(img => {
-                if (category === 'all' || img.classList.contains(category)) {
-                    img.style.display = 'block';
-                } else {
-                    img.style.display = 'none';
-                }
+            document.querySelectorAll('.gallery img').forEach(img => {
+                img.style.display = (category === 'all' || img.classList.contains(category)) ? 'block' : 'none';
             });
         }
     </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
