--- a/telas_ofc/home-2.html
+++ b/telas_ofc/home-2.html
@@ -28,6 +28,20 @@
 </head>
 
 <body>
+
+    <!--  começo vlibras  -->
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+            <div class="vw-plugin-top-wrapper"></div>
+        </div>
+    </div>
+    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+    <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
+    </script>
+    <!--  fim vlibras  -->
+    
     <header>
         <nav class="navbar navbar-expand-lg fixed">
           <div class="container-fluid">
